syntax = "proto3";
package istore2;

message MemoryResourceResponse {
    uint64 offset = 1;
    uint32 return = 2;
}
